# OpenStory

./: .cursorrules  .gitignore  .mailmap  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile.openclaw  Dockerfile.prod  LICENSE  README.md  SECURITY.md  TEAM.md  dev.sh  docker-compose.agent.yml  docker-compose.infra.yml  docker-compose.integration.yml  docker-compose.leaf.yml  docker-compose.observe.yml  docker-compose.openclaw.yml  docker-compose.pi-mono.yml  docker-compose.prod.yml  docker-compose.split.yml  docker-compose.yml  justfile  nats-current.html  nats-proposed.html  nats.conf  story-eval-apply.html  story-paragraphs.html  story.html
.github/: copilot-instructions.md  pull_request_template.md
deploy/: bobby.env.example  infra.env.example  katie.env.example  nats-hub.conf  nats-leaf.conf
docs/: BACKLOG.md  README.md  architecture-overview.md  architecture-topologies.md  architecture-tour.md  design-domain-events.md  design-turn-identity.md  design-two-streams.md  project-context.md
e2e/: .gitignore  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  playwright.diag.config.ts  playwright.perf.config.ts
mcp-server/: README.md  SKILL.md  pyproject.toml  server.py  test_hardening.py  test_tools.py
observe/: otel-collector-config.yml  prometheus.yml
rs/: Cargo.toml  Dockerfile
rs/bus/: Cargo.toml
rs/bus/src/: lib.rs  nats_bus.rs  noop_bus.rs
rs/bus/tests/: nats_integration.rs
rs/cli/: Cargo.toml
rs/cli/src/: main.rs
rs/cli/tests/: test_boot_requires_nats.rs
rs/core/: Cargo.toml
rs/core/src/: cloud_event.rs  event_data.rs  event_data.schema.json  host.rs  lib.rs  output.rs  paths.rs  reader.rs  strings.rs  subtype.rs  translate.rs  translate_hermes.rs  translate_pi.rs  user.rs
rs/core/tests/: test_host_stamping.rs  test_raw_passthrough_invariant.rs  test_subtype_dogfood.rs
rs/patterns/: Cargo.toml
rs/patterns/src/: agent_delegation.rs  error_recovery.rs  eval_apply.rs  git_flow.rs  lib.rs  sentence.rs  test_cycle.rs  turn_phase.rs
rs/schemas/: Cargo.toml
rs/schemas/src/: lib.rs
rs/schemas/tests/: test_cloud_event_dogfood.rs  test_cloud_event_schema.rs  test_envelope_schema.rs  test_jsonl_escape_hatch.rs  test_remaining_schemas.rs  test_subtype_schema.rs  test_view_record_dogfood.rs  test_view_record_schema.rs
rs/semantic/: Cargo.toml
rs/semantic/src/: backfill.rs  embedder.rs  extract.rs  lib.rs  qdrant_store.rs  worker.rs
rs/server/: Cargo.toml
rs/server/proptest-regressions/consumers/: broadcast_proptest.txt
rs/server/src/: api.rs  auth.rs  broadcast.rs  config.rs  event_store_bridge.rs  hooks.rs  ingest.rs  lib.rs  logging.rs  metrics.rs  reconcile.rs  router.rs  state.rs  telemetry.rs  tool_schemas.rs  transcript.rs  ws.rs
rs/server/src/consumers/: broadcast.rs  broadcast_proptest.rs  mod.rs  patterns.rs  persist.rs  projections.rs
rs/server/tests/: test_reconcile.rs
rs/src/: cloud_event.rs  event_data.rs  lib.rs  output.rs  paths.rs  reader.rs  snapshot_watcher.rs  translate.rs  watcher.rs
rs/src/patterns/: mod.rs
rs/src/server/: analysis.rs  api.rs  broadcast.rs  hooks.rs  ingest.rs  mod.rs  persistence.rs  plan_store.rs  projection.rs  state.rs  tool_schemas.rs  transcript.rs  ws.rs
rs/store/: Cargo.toml
rs/store/src/: analysis.rs  event_store.rs  extract.rs  ingest.rs  jsonl_store.rs  lib.rs  mongo_store.rs  persistence.rs  plan_store.rs  projection.rs  queries.rs  sqlite_store.rs  state.rs
rs/store/tests/: event_store_conformance.rs
rs/tests/: Dockerfile.claude-runner  docker-compose.full.yml  docker-compose.integration.yml  docker-compose.jsonl-escape-hatch.yml  docker-compose.leafcluster.yml  docker-compose.multileaf.yml  docker-compose.openclaw-integration.yml  docker-compose.openclaw-mcp.yml  docker-compose.perf.yml  docker-compose.search.yml  docker-compose.split.yml  docker-compose.team-guests.yml  docker-compose.test.yml  gen_seed_data.rs  test_api.rs  test_batch.rs  test_boot.rs  test_broadcast.rs  test_claude_integration.rs  test_compose.rs  test_compose_perf.rs  test_config_degrade.rs  test_config_full.rs  test_config_search.rs  test_consumers.rs  test_container.rs  test_convergence_invariants.rs  test_dedup.rs  test_deployment_states.rs  test_eval_apply_probability.rs  test_fuzzy_pipe.rs  test_golden_replay.rs  test_hermes_e2e.rs  test_hermes_snapshot_watcher.rs  test_hermes_translator.rs  test_hooks.rs  test_ingest.rs  test_jsonl_escape_hatch.rs  test_k8s.rs  test_leaf_cluster.rs  (+33 more)
rs/tests/fixtures/: claude-entrypoint.sh  claude-runner-settings.json  pi_mono_session.jsonl  synth_global.jsonl  synth_hooks.jsonl  synth_origin.jsonl  synth_translator.jsonl  synthetic.jsonl  turn_probability_classes.json
rs/tests/fixtures/hermes/: Dockerfile  Dockerfile.hermes  generate_session.py  real_code_review_patch.jsonl  real_complex_refactor.jsonl  real_delegate.jsonl  real_execute_code.jsonl  real_search_bash.jsonl  real_session.jsonl  real_simple_read.jsonl  real_tool_error.jsonl  real_write_read_chain.jsonl  session_plugin.jsonl  session_snapshot.json
rs/tests/fixtures/pi_mono/: scenario_06_thinking_text_tool.jsonl  scenario_snake_game.jsonl
rs/tests/fixtures/test-repo/: README.md  config.toml  hello.py
rs/tests/helpers/: bus.rs  compose.rs  container.rs  k8s.rs  mod.rs  openclaw.rs  synth.rs
rs/tests/snapshots/: pi_mono_scenario_07_multi_tool.golden.json  pi_mono_session.golden.json  synthetic_claude.golden.json
rs/views/: Cargo.toml
rs/views/src/: filter.rs  from_cloud_event.rs  html.rs  lib.rs  markdown.rs  pair.rs  tool_input.rs  unified.rs  view_record.rs  wire_record.rs
schemas/: broadcast_message.schema.json  cloud_event.schema.json  cloud_event_envelope.schema.json  fts_search_result.schema.json  ingest_batch.schema.json  pattern_event.schema.json  session_row.schema.json  structural_turn.schema.json  subtype.schema.json  view_record.schema.json  wire_record.schema.json
scripts/: analyze_eval_apply_shape.py  analyze_event_groups.py  analyze_payload_sizes.py  analyze_plan_events.py  analyze_sessions.py  (+42 more)
(+396 files in other folders)
