[project]
name = "openstory-mcp"
version = "0.1.0"
description = "MCP server for OpenStory — read-only agent self-awareness tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
openstory-mcp = "server:main"
