[package]
name = "open-story-bus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Event bus trait and NATS implementation for open-story — architectural boundary between producers and consumers"

[dependencies]
open-story-core = { path = "../core" }
async-nats = "0.38"
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
