[package]
name = "open-story-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core types and utilities for open-story — CloudEvent, translate, reader"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
