[package]
name = "open-story-patterns"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Streaming pattern detection for open-story — behavioral pattern recognition over event streams"

[dependencies]
open-story-core = { path = "../core" }
open-story-views = { path = "../views" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
