[package]
name = "open-story-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "HTTP/WS server: API, hooks, ingest, broadcast — the BFF layer"

[dependencies]
open-story-core = { path = "../core" }
open-story-bus = { path = "../bus" }
open-story-patterns = { path = "../patterns" }
open-story-store = { path = "../store" }
open-story-views = { path = "../views" }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
