[package]
name = "open-story-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Event store: bus consumer → dedup → persist → project → detect patterns"

[features]
default = []
# Enable SQLCipher encryption. Requires OpenSSL (or vcpkg openssl on Windows).
# Build with: cargo build --features encryption
# Without this feature, db_key config is accepted but ignored.
encryption = []

[dependencies]
open-story-core = { path = "../core" }
open-story-views = { path = "../views" }
open-story-patterns = { path = "../patterns" }
open-story-bus = { path = "../bus" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
regex = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
walkdir = "2"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
