[package]
name = "open-story-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Event store: bus consumer → dedup → persist → project → detect patterns"

[features]
default = []
# Enable SQLCipher encryption. Requires OpenSSL (or vcpkg openssl on Windows).
# Build with: cargo build --features encryption
# Without this feature, db_key config is accepted but ignored.
encryption = []
# Enable MongoDB as an EventStore backend. Adds the async `mongodb` driver
# and `bson` as hard deps. Without this feature, MongoStore code is excluded
# entirely (the feature gate also excludes the conformance suite's
# `mongo_backend` module). The SQLite backend is unaffected either way.
mongo = ["dep:mongodb", "dep:bson", "dep:futures"]

[dependencies]
open-story-core = { path = "../core" }
open-story-views = { path = "../views" }
open-story-patterns = { path = "../patterns" }
open-story-bus = { path = "../bus" }
anyhow = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
regex = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
walkdir = "2"
dashmap = "6"
# MongoDB backend (feature `mongo`).
mongodb = { version = "3.2", optional = true }
bson = { version = "2.13", features = ["chrono-0_4"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
# Mongo testcontainer for the conformance suite (requires --features mongo).
testcontainers = { version = "0.27.2", features = ["http_wait"] }
